	Patch by Dmitry Frank (a.k.a. dimonomid).

	Added {root} key to 'viewcolumns' option (complements {ext}).  Thanks to
	Oleg Gordienko (a.k.a. gordio).

	Added "u" flag to the 'tuioptions' option.  It enables use of Unicode
	characters in the TUI (Unicode ellipsis instead of "...").  Thanks to Oleg
	Gordienko (a.k.a. gordio).

	Changed :filter command to accept pattern (//, ////, {} or {{}}).  Thanks
	to rbong.

	Improved parsing of optional numbers in vifminfo.  Thanks to Aris
	Fergadis (a.k.a. afergadis).

	Indicate preview created with %q with "Command: cmd".

	Better detection of write errors on file copying.  The error was reported,
	but it wasn't treated as a hard error specific case related to caching.

	Made :siblnext and :siblprev commands respect dot and name filters.

	Disabled spell checking of vifm files in Vim except for comments.

	H/M/L keys in ls-like view now account for columns.

	Made :siblnext and :siblprev accept [count] range.  Thanks to filterfalse.

	Made :tree pick up list of files from custom view.  Thanks to filterfalse.

	Do not go to start of line on Ctrl-U/Ctrl-D/Ctrl-F/Ctrl-B/G in ls-like view.

	Documented more details about 'vicmd' and 'vixcmd' options.  Thanks to
	Sebastian Cyprych.

	Made :highlight update file-specific group on exact match of the pattern
	instead of appending new rule.  Thanks to aleksejrs.

	Extend width of the cursor in ls-like view to the width of the cell.
	Thanks to Dmitry Frank (a.k.a. dimonomid).

	Don't trigger DirEnter event with previous directory on startup when list
	of files is specified on stdin.  Thanks to filterfalse.

	Improved performance of mime-type detection when using libmagic (now might
	be about seven times faster by avoiding reinitialization of the library).

	Don't force file list reload after `:!` and rely on change detection.
	This should result in somewhat better performance.  Thanks to opennota.

	Duplicate status bar error in dialog that reports sourcing error.  Will