@@ -1,4 +1,4 @@
-.TH VIFM 1 "November 25, 2017" "vifm 0.9"
+.TH VIFM 1 "November 28, 2017" "vifm 0.9"
 .\" ---------------------------------------------------------------------------
 .SH NAME
 .\" ---------------------------------------------------------------------------
@@ -4221,6 +4221,7 @@ values are available:
 if you just want to type a fast shortcut consisting of multiple keys), num \
 specifies the delay in ms (500 by default), 'timeoutlen' at most;
  - keys            - include shortcuts (commands and selectors);
+ - foldsubkeys     - fold multiple keys with common prefix;
  - marks           - include marks;
  - registers[:num] - include registers, at most num files (5 by default).
 .TP
